fixed css to widen menu bar and fixed layout on mobile

--- a/_static/mxnet.css
+++ b/_static/mxnet.css
@@ -131,8 +131,7 @@ img {
 
 .navbar .container {
     position: relative;
-    left: 20px;
-    width: 75%;
+    width: 100%;
 }
 
 @media screen and (max-width: 510px) {
@@ -175,6 +174,8 @@ img {
    padding-top: 0;
     margin-top: 0;
     width: 125px;
+   padding-left: 25px;
+   padding-right: 200px;
 }
 
 #logo {
